fix: change wrong controller name

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id user %>">
   <p>
-    <strong>Namelstring:</strong>
-    <%= user.nameLstring %>
+    <strong>name:</strong>
+    <%= user.name %>
   </p>
 
   <p>
