--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :nameLstring, style: "display: block" %>
-    <%= form.text_field :nameLstring %>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
   </div>
 
   <div>
